Update : Enhanced dashboard
Version 2. Yet to be modified according to style

--- a/dash1.html
+++ b/dash1.html
@@ -6,38 +6,149 @@
         <title> Auto-Screen </title>
         <link rel="stylesheet" href="style1.css">
     </head>
-    
 
     <body class="designerW">
-        <nav class="topScreen">
-            <h1 class="topScreenF1"> Welcome Mr. Sundharakumar </h1>
-            <img class="topScreenAvatar" src="img/imgAvatar.jpeg">
-            <form class="topScreenSB">
-                <input class="topScreenSBP" type="text" placeholder="Search...">
+        <div class="topScreen">
+            <h1 class="topScreenF1"> Welcome Mr. Yashwanth Krishna </h1>
+            <img  class="topScreenAvatar" src="img/imgAvatar.jpeg">
+            <form>
+                <input class="topScreenSBP" type="text" placeholder="Search..." maxlength="20">
             </form>
             <img class="topScreenSearch" src="img/imgSearch.jpeg">
             <img class="topScreenAlerts" src="img/imgAlert.jpeg">
             <img class="topScreenAnnouncement" src="img/imgAnnounce.jpeg">
             <img class="topScreenSettings" src="img/imgSettings.jpeg">
             <img class="topScreenLogout" src="img/imgLogout.jpeg">
-            <p class="topScreenF2">  Welcome to Auto-Screen! An application developed to empower NIA agents to streamline social media investigations with advanced automation and AI insights. Ready to uncover critical evidence securely and efficiently.</p>
-        </nav>
+            <p class="topScreenF2">
+                Welcome to Auto-Screen! An application developed to empower NIA agents to streamline social media investigations with advanced automation and AI insights. Ready to uncover critical evidence securely and efficiently.
+            </p>
+        </div>
 
-        <nav class="bodyScreen">
+        <div class="bodyScreen">
             <div class="sideScreenL">
-                <div class="autoScreenB">
-
+                <div class="sideLFirst">
+                    <h5 class="sideLNavigationF1"> Navigation Bar </h5>
+                    <img class="sideLNavigation" src="img/imgNavigation.jpeg">
                 </div>
-
-                <div class="sideScreenR">
-                
+                <div class="sideLNext1">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
                 </div>
-
-                <div class="contactBar">
-
+                <div class="sideLNext2">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
                 </div>
+                <div class="sideLNext3">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <div class="sideLNext4">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <div class="sideLNext5">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <div class="sideLNext6">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <div class="sideLNext7">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <div class="sideLNext8">
+                    <h6 class="sideLNavigationF2"> Text one here </h6>
+                </div>
+                <a class="sideLF" href="copyrights">
+                    @2024 Auto-Screen community
+                </a>
             </div>
 
-        </nav>
+            <div class="autoScreenB">
+                <div class="autoScreenBD">
+                    <h1 class="autoScreenF1"> Auto-Screen </h1>
+                </div>
+                <a href="V1_Project_Dashboard/dash1.html">
+                    <div class="navigationFont1">
+                        Profile
+                    </div>
+                </a>
+                <a href="V1_Project_Dashboard/dash1.html">
+                    <div class="navigationFont2">
+                        Events
+                    </div>
+                </a>
+                <a href="V1_Project_Dashboard/dash1.html">
+                    <div class="navigationFont3">
+                        Private Files
+                    </div>
+                </a>
+                <a href="V1_Project_Dashboard/dash1.html">
+                    <div class="navigationFont4">
+                        History
+                    </div>
+                </a>
+                <a href="www.google.com">
+                    <button class="aiButton">
+                        AI Support
+                    </button>
+                </a>
+                <a href="s">
+                    <button class="dotbutton">
+                    </button>
+                </a>
+            </div>
+
+            <div class="sideScreenR">
+                <div class="sideRDiv1">
+                    <img class="sideRRecents" src="img/imgCam.jpeg">
+                </div>
+                <div class="sideRDiv2">
+                    <img class="sideRRecents" src="img/imgPrint.jpeg">
+                </div>
+                <div class="sideRDiv3">
+                    <img class="sideRRecents" src="img/imgRecents.jpeg">
+                </div>
+                <div class="sideRDiv4">
+                    <img class="sideRRecents" src="img/imgBin.jpeg">
+                </div>
+                <div class="sideRDiv5">
+                    <img class="sideRRecents" src="img/imgLock.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="contactBar">
+            <div class="contactDiv1">
+                <center>
+                    <a href="feedback" class="contactA">
+                        Feedback
+                    </a>
+                </center>
+            </div>
+            <div class="contactDiv2">
+                <center>
+                    <a href="feedback" class="contactA">
+                        Report Issue
+                    </a>
+                </center>
+            </div>
+            <div class="contactDiv3">
+                <center>
+                    <a href="feedback" class="contactA">
+                        Contact Us
+                    </a>
+                </center>
+            </div>
+            <div class="contactDiv4">
+                <center>
+                    <a href="feedback" class="contactA">
+                        Terms & Conditions
+                    </a>
+                </center>
+            </div>
+            <div class="contactDiv5">
+                <center>
+                    <a href="feedback" class="contactA">
+                        Version
+                    </a>
+                </center>
+            </div>
+        </div>
     </body>
+
 </html>
